Fixed spacing and incorrect fax number

--- a/assets/scss/modules/index.module.scss
+++ b/assets/scss/modules/index.module.scss
@@ -33,7 +33,7 @@
             box-shadow: inset 0px 0px 0px 3px rgba(238, 238, 238, 0.75);
 
             .homeText {
-                font-size: 90%;
+                font-size: 1.5rem;
             }
         }
     }
